--- a/web/public/index.html
+++ b/web/public/index.html
@@ -37,18 +37,20 @@
     <!-- Pool 1 -->
     <div style="width: 50%; background-color: aliceblue; float: left;">
       <h2 style="margin: auto; width: fit-content;">Pool 1</h2>
-      <p>Balance: <span id="balancePool_1"></span></p>
+      <p>Balance: <span id="balancePool_1">...</span> BNB</p>
+      <p>My stake: <span id="myStakePool_1">...</span> BNB</p>
       
-      <input id="amountPool_1" type="number">
+      <input id="amountPool_1" type="number" value="0.1" step="0.1" min="0.1">
       <button onclick="window.Index.makeVote(1)">Vote</button>
     </div>
 
     <!-- Pool 2 -->
     <div style="width: 50%; background-color:antiquewhite; float: left;">
       <h2 style="margin: auto; width: fit-content;">Pool 2</h2>
-      <p>Balance:  <span id="balancePool_2"></span></p>
+      <p>Balance:  <span id="balancePool_2">...</span> BNB</p>
+      <p>My stake: <span id="myStakePool_2">...</span> BNB</p>
 
-      <input id="amountPool_2" type="number">
+      <input id="amountPool_2" type="number" value="0.1" step="0.1" min="0.1">
       <button onclick="window.Index.makeVote(2)">Vote</button>
     </div>
     </div>
