--- a/web/public/index.html
+++ b/web/public/index.html
@@ -77,7 +77,8 @@
         <p>Available reward: <span id="availableRewardVersus">...</span> VERSUS</p>
         
         <input id="stake_versus_versus" type="number" value="0.1" step="0.1" min="0.1">
-        <button onclick="window.Index.makeStake(1)">Stake Versus Versus</button>
+        <button id="btn_stake_versus_versus" style="display: none;" onclick="window.Index.makeStake(1)">Stake Versus Versus</button>
+        <button id="btn_approve_versus_versus" style="display: none;" onclick="window.Index.approve()">Approve Versus Versus</button>
 
         </br>
         </br>
@@ -98,7 +99,8 @@
         <p>Available reward: <span id="availableRewardBNB">...</span> BNB</p>
 
         <input id="stake_versus_bnb" type="number" value="0.1" step="0.1" min="0.1">
-        <button onclick="window.Index.makeStake(2)">Stake Versus BNB</button>
+        <button id="btn_stake_versus_bnb" style="display: none;" onclick="window.Index.makeStake(2)">Stake Versus BNB</button>
+        <button id="btn_approve_versus_bnb" style="display: none;" onclick="window.Index.approve()">Approve Versus Versus</button>
 
         </br>
         </br>
